Relative link change

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <img class="image" src="Images/1" alt="Food Image">
         <main>
             <ul>
-            <li class="list"><a href="/recipes/chicken_tikka.html">Chicken Tikka</a></li>
-            <li class="list-1"><a href="/recipes/french_toast.html">French Toast</a></li>
+            <li class="list"><a href="/recipes/chickentikka.html">Chicken Tikka</a></li>
+            <li class="list-1"><a href="/recipes/frenchtoast.html">French Toast</a></li>
             <li class="list-2"><a href="recipes/pancake.html">Pancake</a></li>
         </ul>
         </main>
