image link change

--- a/recipes/chickentikka.html
+++ b/recipes/chickentikka.html
@@ -10,7 +10,7 @@
 <body>
     <h1>chicken Tikka</h1>
     <main>
-        <img src="/Images/Chicken Tikka.jpg" alt="Chicken Tikka Dish">
+        <img src="Images/Chicken Tikka.jpg" alt="Chicken Tikka Dish">
         <h2>Description</h2>
         <p class="description">
             This Indian chicken tikka masala is an easy but flavorful version of everyone's favorite mild-medium curry! Serve with naan bread and mango chutney. Garnish with additional cilantro leaves.
