--- a/recipes/pancake.html
+++ b/recipes/pancake.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>PanCake</h1>
-    <img src="/Images/pancake.jfif" alt="Pancake">
+    <img src="Images/pancake.jfif" alt="Pancake">
     <main>
         <h2>Description</h2>
         <p class="description">
