--- a/recipes/frenchtoast.html
+++ b/recipes/frenchtoast.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>French Toast</h1>
-    <img src="Images/french toast.jfif" alt="French Toast Dish">
+    <img src="french toast.jfif" alt="French Toast Dish">
     <main>
         <h2>Description</h2>
         <p class="description">This French toast recipe is different because it uses flour. I have given it to some friends and they've all liked it better than the French toast they usually make!</p>
